--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ nav {
 }
  
 nav.active{
-    width: 50%;
+    width: 60%;
 }
 
 nav ul{
@@ -69,7 +69,7 @@ nav ul a{
     position: relative;
     color: var(--orange-color);
     text-decoration: none;
-    margin: 0 2.8rem;
+    margin: 0 5rem;
     font-weight: bold;
 }
 
@@ -93,7 +93,7 @@ nav ul a{
     width: 20px;
     position: absolute;
     top: 10px;
-    left: 5px;
+    left: 8px;
     transition: transform 0.6s linear;
 }
 
@@ -110,14 +110,20 @@ nav.active .icon .line2{
     transform: rotate(765deg) translateY(-5.5px);
 }
 
-@media(max-width: 1220px){
+@media(max-width: 1400px){
     nav ul a{
-        margin: 0 2rem;
-};
+        margin: 0 4rem;
+    };
 }
 
-@media(max-width: 920px){
+@media(max-width: 1300px){
     nav ul a{
-        margin: 0 0.5rem;
-    }
+        margin: 0 3rem;
+    };
 }
+
+@media(max-width: 1100px){
+    nav ul a{
+        margin: 0 2rem;
+    }
+} 
